Fix icon spacing issue

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -124,7 +124,7 @@ body {
 .feature .icon {
   height: 6em;
   width: 4em;
-  padding: 1em 0;
+  padding: 1em;
   margin: 1.5em;
   background: #37e7a2;
   border-radius: 100%;
